--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -2,57 +2,7 @@
   <h5 class="section-title">Home</h5>
   <div class="row">
       <div class="col-sm-4">
-          <div class="card">
-              <div class="card-body">
-                  <div class="row">
-                      <div class="col-sm-9">
-                          <h5 class="card-title">Tickets</h5>
-                      </div>
-                      <div class="col-sm-2">
-                          <span class="text-danger fw-bold">70</span>
-                      </div>
-                  </div>
-                  <table class="table table-borderless">
-                      <thead>
-                      <tr>
-                          <th>Tickets</th>
-                          <th class="align-center">No. of Tickets</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr>
-                          <td>Authorize Quotation</td>
-                          <td class="align-center">10</td>
-                      </tr>
-                      <tr>
-                          <td>Authorize Transaction</td>
-                          <td class="align-center">15</td>
-                      </tr>
-                      <tr>
-                          <td>Underwrite Policy</td>
-                          <td class="align-center">20</td>
-                      </tr>
-                      <tr>
-                          <td>Underwrite Quotation</td>
-                          <td class="align-center">15</td>
-                      </tr>
-                      <tr>
-                          <td>Create Claim</td>
-                          <td class="align-center">6</td>
-                      </tr>
-                      <tr>
-                          <td>Dispatch Documents</td>
-                          <td class="align-center">10</td>
-                      </tr>
-                      </tbody>
-                  </table>
-                  <div class="row">
-                      <div class="text-end">
-                          <a class="text-primary" href="#">View all</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
+        <app-tickets-summary></app-tickets-summary>
       </div>
 
       <!--calendar-->
